macros/tests/fail/missing_positional.rs
fn main() {
    sqlm_macros::sql!("foo{1} {}", "bar");
}
